<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">&appName;</string>
    <string name="google_map_api" translatable="false">AIzaSyDgxUkkfvb-L-bQyr5_WFbj18w2swdn1QY</string>
    <string name="facebook_app_id" translatable="false">1947608288660880</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">bd15bdc9cf953d7a2419ccbe4930bd44</string>
    <string name="action_settings">Settings</string>
    <string name="action_coupon">Coupon</string>
    <string name="action_wallet">Wallet</string>
    <string name="action_logout">Logout</string>
    <string name="choose_language">Choose Language</string>
    <string-array name="languagelist" tools:ignore="InconsistentArrays">
        <item>English</item>
    </string-array>
    <string-array name="languagecode" tools:ignore="InconsistentArrays">
        <item>en</item>
    </string-array>
    <string-array name="languagecountrycode" tools:ignore="InconsistentArrays">
        <item>en_GB</item>
    </string-array>
    <string name="sample_mail_id" translatable="false">name@examplecom</string>
    <string name="apply">APPLY</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_the_coupon">Enter coupon code</string>
    <string name="add_coupon_code">Add Coupon code</string>
    <string name="sign_in">Login</string>
    <string name="signup">Sign up</string>
    <string name="edit_profile">Edit Account</string>
    <string name="change_password">Looking to change password?</string>
    <string name="save">SAVE</string>
    <string name="update_success">Profile Updated</string>
    <string name="where_to_go">Enter your drop off location</string>
    <string name="extend_trip">Extend Trip?</string>
    <string name="selected_payment_mode">Cash</string>
    <string name="change">Change</string>
    <string name="request_xuber">Request &Service;</string>
    <string name="schedule">Schedule a &Service;</string>
    <string name="sample_date">Choose a date</string>
    <string name="sample_time">Choose a time</string>
    <string name="next">Schedule Request</string>
    <string name="different_time">You can\'t schedule in past timings, please choose different time</string>
    <string name="choose_date_time">Please choose date and time for schedule</string>
    <string name="upcoming_trips">Upcoming Rides</string>
    <string name="past_trips">Past Rides</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="looking_for_ride">Finding &Service;....</string>
    <string name="cancel_ride">Cancel &service;</string>
    <string name="share">Share</string>
    <string name="cancel_ride_alert">Are you sure want to cancel the &service;?</string>
    <string name="no_drivers_found">No &provider; available to take your ride</string>
    <string name="driver_busy">Your ride was cancelled by the &provider;.Please contact us for support</string>
    <string name="sample_name">""</string>
    <string name="call_btn">Call</string>
    <string name="cancel_trip">Cancel</string>
    <string name="surge_pricing">Due to peak hours, charges will be vary based on availability of providers</string>
    <string name="payment">Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_payments">Add Card for payments</string>
    <string name="card_number">Credit/Debit Card Number</string>
    <string name="add">Add Card</string>
    <string name="enter_card_details">Card details not valid</string>
    <string name="are_you_sure">Are you sure want to remove?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrived">&Provider; has arrived at your location</string>
    <string name="picked_up">Enjoy the &service;</string>
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="no_trips">You have no past rides</string>
    <string name="no_upcoming_trips">You have no upcoming rides</string>
    <string name="invoice">Invoice</string>
    <string name="base_price">Base Price</string>
    <string name="booking_id">Booking ID</string>
    <string name="sample_base_price" translatable="false">0</string>
    <string name="sample_distance" translatable="false">0</string>
    <string name="sample_time_travel" translatable="false">0</string>
    <string name="extra_price">Extra</string>
    <string name="tax">Tax Charges</string>
    <string name="wallet_detection">Wallet Detection</string>
    <string name="discount_detection">Discount Applied</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="distance_price">Distance Price</string>
    <string name="rate_provider">Rate your ride with</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="submit">Submit</string>
    <string name="source_location">Enter your pickup location</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="change_pwd_dialog">Your password has updated successfully. Please login with your new password.</string>
    <string name="cencel_request">Are you sure you want to cancel the &service;?</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet</string>
    <string name="server_down">Unable to reach server</string>
    <string name="please_try_again">Please try again</string>
    <string name="please_wait">Please wait...</string>
    <string name="email_validation">Enter your email ID</string>
    <string name="not_valid_email">Not a valid email ID</string>
    <string name="password_validation">Password could not be left empty</string>
    <string name="first_name_empty">First name required</string>
    <string name="last_name_empty">Last name required</string>
    <string name="mobile_number_empty">Mobile number required</string>
    <string name="mobile_number_validation">Mobile number must have numbers between 10 to 20 digits</string>
    <string name="social_cancel">Social login cancelled</string>
    <string name="True" translatable="false">true</string>
    <string name="False" translatable="false">false</string>
    <string name="add_money_using">Add money using</string>
    <string name="not_vaild_coupon">Coupon is not valid or may expired</string>
    <string name="coupon_added">Coupon applied successfully</string>
    <string name="add_coupon_txt">Add Coupon</string>
    <string name="added_coupon">Coupon\'s applied by you</string>
    <string name="already_in_use_coupon">Coupon already used by you</string>
    <string name="expired_coupon">Sorry, coupon has expired</string>
    <string name="off">OFF</string>
    <string name="the_applied_coupon">The coupon code applied is</string>
    <string name="valid_until">Valid until</string>
    <string name="wallet_balance">Your wallet amount is</string>
    <string name="change_password_title">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="please_enter_current_pass">Please enter current password</string>
    <string name="please_enter_new_pass">Please enter new password</string>
    <string name="please_enter_confirm_pass">Please enter confirmation password</string>
    <string name="different_passwords">Password doesn\'t match</string>
    <string name="commision">Service charge</string>
    <string name="request_cancel">You have cancelled the request</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valid_image">No image found</string>
    <string name="logout_alert">Are you sure want to logout?</string>
    <string name="time_taken">Time Taken</string>
    <string name="extend_trip_alert">Do you want to extend the ride with the selected location?</string>
    <string name="no_comments">No comment available</string>
    <string name="pin_location">Set pin location</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="home_location">Favorite Place</string>
    <string name="delete">Delete</string>
    <string name="favorites">Favorites</string>
    <string name="language">Change Language</string>
    <string name="add_home_location">Add Favorite Place</string>
    <string name="work_location">Another Place</string>
    <string name="add_work_location">Add Another Place</string>
    <string name="save_location">Saved places</string>
    <string name="type">Model</string>
    <string name="emaergeny_call">Are you sure want to proceed with Emergency call?</string>
    <string name="user_no_mobile">No mobile number</string>
    <string name="profile">Profile</string>
    <string name="reason_to_cancel">Reason for cancellation</string>
    <string name="surge_pricing_title">Due to high demand or peak hours price may vary</string>
    <string name="help">Help</string>
    <string name="book_name">Booking ID</string>
    <string name="sorry_for_inconvinent">Sorry for inconvenient,Our assistants are busy right now</string>
    <string name="email_exist">The email has already been taken</string>
    <string name="ok">OK</string>
    <string name="use_wallet_amount">Use wallet amount</string>
    <string name="arriving">&Provider; accepted your request.</string>
    <string name="view_invoice">View receipt</string>
    <string name="walletHistory">Wallet history</string>
    <string name="couponHistory">Coupon history</string>
    <string name="passbook">Passbook</string>
    <string name="settings">Settings</string>
    <string name="no_wallet_history">No wallet history available!</string>
    <string name="no_coupon_history">No coupon history available!</string>
    <string name="new_version_available">New version available</string>
    <string name="update_to_continue">Please, update app to new version.</string>
    <string name="update">Update</string>
    <string name="no_thanks">No, thanks</string>
    <string name="new_password_validation">New password should not be same as old password.</string>
    <string name="i_agree_ro_the_terms_amp_conditions_and_privacy_policy"><![CDATA[I agree to the Terms & Conditions and Privacy Policy]]></string>
    <string name="send_otp_again">Send OTP Again</string>
    <string name="support">Support</string>
    <string name="home">Home</string>
    <string name="what_s_your_number">What\'s your Mobile number ?</string>
    <string name="we_ll_text_a_code_to_verify_phone">We\'ll text a code to verify your phone</string>
    <string name="verify">Verify</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="sent_to">Sent to</string>
    <string name="confirm">Confirm</string>
    <string name="what_s_your_name">Enter your Details</string>
    <string name="drivers_will_confirm_it_s_you_when_they_pick_up">Drivers will confirm it\'s you when they pick you up</string>
    <string name="ongoings">Ongoing</string>
    <string name="rides">Rides</string>
    <string name="country_code">+260</string>
    <string name="city">City</string>
</resources>